<resources>
    <string name="app_name">Carpathians</string>

    <string name="parametre">Settings</string>
    <string name="menu">Menu</string>

    <!--Espace utilisateur-->
    <string name="espaceUtilisateur">Profile</string>
    <string name="espaceLieux">Places</string>

    <string name="connexion">Sign in</string>
    <string name="inscription">Sign up</string>
    <string name="deconnexion">Logout</string>
    <string name="favoris">Favourites</string>

    <string name="montagne">Mountains</string>
    <string name="chateau">Castle</string>
    <string name="info"> Information </string>
    <string name="langue"> Language </string>
    <string name="option"> setting </string>
    <string name="recherche"> Search ... </string>

    <string name="google_maps_key">AIzaSyCVz7gX8ETwHOPQj4EDBBmaCXkg3YOqe-w</string>

    <string name="chateaubran"> Bran Castle</string>
    <string name="chateauhunedoara"> Corvin Castle</string>
    <string name="lieuajoutfav">Place has been added to your favorite</string>

    <string name="title_activity_maps">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--utilisateur-->
    <string name="email">Email</string>
    <string name="mdp">Password</string>
    <string name="nom">Fullname</string>
    <string name="btn_inscription">Register</string>
    <string name="btn_lien_inscription">Not a member? Sign up now.</string>
    <string name="btn_lien_connexion">Already registred! Login Me.</string>
    <string name="btn_ajout_favoris">This place has been added to your favorites</string>
    <string name="bienvenue">Welcome</string>
</resources>
