<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/espaceUtilisateur">
        <menu>
            <item
                android:id="@+id/nav1"
                android:icon="@drawable/connexion"
                android:title="@string/connexion"/>
            <item
                android:id="@+id/nav2"
                android:icon="@drawable/nouveau"
                android:title="@string/inscription" />
        </menu>
    </item>

    <item android:title="@string/espaceLieux">
        <menu>
            <item
                android:id="@+id/nav3"
                android:icon="@drawable/chateau"
                android:title="@string/chateau"/>
            <item
                android:id="@+id/nav4"
                android:icon="@drawable/montagne"
                android:title="@string/montagne" />
        </menu>
    </item>

</menu>